--- a/dokumentacja.html
+++ b/dokumentacja.html
@@ -94,12 +94,12 @@ Data: 14 czerwca 2025</p>
 <li><code>random</code> – generowanie losowych wartości</li>
 <li><code>datetime</code>, <code>dateutil.relativedelta</code> – operacje na datach</li>
 <li><code>numpy</code>, <code>pandas</code>, <code>scipy</code> – przetwarzanie i analiza danych</li>
-<li><code>mysql.connector</code>, <code>sqlalchemy</code>, <code>pymsql</code> – łączenie i operacje na bazie MySQL/MariaDB</li>
+<li><code>mysql.connector</code>, <code>sqlalchemy</code>, <code>pymsql</code> – łączenie i operacje na bazie MariaDB</li>
 <li><code>faker</code> – sztuczne dane personalne</li>
 <li><code>Plotly</code> - wizualizacje w raporcie</li>
 <li><code>IPython.display</code> - tworzenie zautomatyzowanych Markdownów</li>
 </ul></li>
-<li><strong>SQL (MariaDB/MySQL)</strong> – definicja i tworzenie schematu bazy</li>
+<li><strong>SQL (MariaDB)</strong> – definicja i tworzenie schematu bazy</li>
 </ul>
 <hr>
 </section>
@@ -122,7 +122,7 @@ Data: 14 czerwca 2025</p>
 <tr class="odd">
 <td><code>baza_danych.sql</code></td>
 <td>SQL</td>
-<td>Skrypt DDL: tworzy tabele, klucze główne i&nbsp;obce oraz indeksy</td>
+<td>Tworzy tabele, klucze główne i&nbsp;obce oraz indeksy</td>
 </tr>
 <tr class="even">
 <td><code>skrypt.py</code></td>
@@ -142,7 +142,7 @@ Data: 14 czerwca 2025</p>
 <tr class="odd">
 <td><code>schemat.png</code></td>
 <td>PNG</td>
-<td>Schemat ER wygenerowany z&nbsp;<code>baza_danych.sql</code></td>
+<td>Schemat ERD wygenerowany z&nbsp;<code>baza_danych.sql</code></td>
 </tr>
 <tr class="even">
 <td><code>dokumentacja.md</code></td>
